	overflow when computing the next quotient digit.
	Reported by Paul DeMarco <pdemarco@ppg.com>.

1.15
	Fixed a bug in the definition of MP_DIGIT_MAX that caused errors
	when IMath is built under 64-bit Linux.  Reported by
	Klaus Stengel <klaus.stengel@informatik.stud.uni-erlangen.de>.

	Unpacked the macro definitions in imath.c a bit, to make them more
	readable.

	Added mp_int_expt_full() by request of Andrea Barberio
	<insomniac@slackware.it>.

1.16
	Fixed a bug in mp_int_to_uint() which was causing incorrect MP_RANGE
	errors during small integer conversion.
	Reported by Andrea Barberio <insomniac@slackware.it>

	Added mp_int_compare_uvalue().
	Added some new testing hooks in imtest.c, new unit tests.

	Made some code style changes that do not affect functionality.

1.17
	Fixed a bug in mp_int_swap() where mpz_t structures using their single
	field as storage would not get swapped correctly.
	Reported by Andres Navarro <canavarro82@gmail.com>

	Added regression test for this and some hooks for future
	regressions in the tests/test.sh script.

1.18
	Made mp_int_rat() use mp_int_init() to initialize numerator and
	denominator instead of mp_int_init_size().
	Some minor code cleanup inside the testing code (imdrover.c).

	Fixed an off-by-one bug in s_udiv() which could cause the quotient
	guessing loop to spin.  Reported by Andres Navarro.  Added
	triggering example to div.t as a regression test.

1.19
	Fix signedness error in compile.  Reported by Paweł Sikora.

1.20
	Fix broken comments, apparently from a previous bad merge.
	Remove emacs folding-mode comments throughout.
	Some minor Makefile cleanup to make clang happier.

1.21
	Fix a syntax error. TODO: Run tests before merging, or better
	still set up CI someplace.
	Remove dead division code.
	Restore a missing comparison.
	Drop dead flags from the Makefile.

1.22
	Remove MP_USMALL_MIN, which was unused by anything in imath.
	Rework doc.txt into Markdown.