@@ -391,3 +391,4 @@
 1.22
 	Remove MP_USMALL_MIN, which was unused by anything in imath.
 	Rework doc.txt into Markdown.
+	Restore imath-test.scm and imath.py, dropped during import.
